<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"></string>
     <string name="menu_settings">Settings</string>
    <string name="title_activity_main">图片处理实例</string>
    <string name="choose_image">请选择图片</string>
    <string name="no_found">没有找到图片</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="edit">编辑</string>
    <string name="tone">调色</string>
    <string name="frame">边框</string>
    <string name="load_failure">图片加载失败</string>
    <string name="saturation">饱和度</string>
    <string name="brightness">亮 度</string>
    <string name="contrast">对比度</string>
    <string name="crop">剪切</string>
    <string name="rotation">旋转</string>
    <string name="reversion">反转</string>
    <string name="zoom">缩放</string>
    <string name="wait">请稍等...</string>
    <string name="effect">特效</string>
    <string name="old_remeber">怀旧</string>
    <string name="sharpen">锐化</string>
    <string name="blur">模糊</string>
    <string name="overlay">叠加</string>
    <string name="film">底片</string>
    <string name="emboss">浮雕</string>
    <string name="sunshine">光照</string>
    <string name="neon">霓虹</string>
    <string name="halo">光晕</string>    
    <string name="no_sd_card">未找到SD卡</string>
      <string name="text">贵州蜡染：亦被称作“贵州蜡花”，最早可追溯到2000多年前的西汉时代。它以素雅的色调、优美的纹样、丰富的文化内涵，在贵州民间艺术中独树一帜。蜡染，是一种古老的防染工艺，古称“蜡缬”，与绞缬、夹结一起被称中我国古代染缬工艺的三种基本类型。蜡染工艺品的魅力除了图案精美外，还在于蜡冷却后在织物上产生龟裂，色料渗入裂缝，得到变化多样的色纹，俗称“冰纹”。同一图案设计，做成蜡染后可得到不同的“冰纹”。</string>
      <string name="text1">软件制作小组：官峰华(程序设计);陈驰(美工设计)</string>  
</resources>
 
